--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <script>
-    window.location.href="https://blog.csdn.net/u013837825";
+    window.location.href="https://my.oschina.net/mengzhang6/";
 </script>
 
 <body>
