--- a/about.html
+++ b/about.html
@@ -1,15 +1,9 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is BY."
+description: 白茶清欢无别事  我在等风也等你
 header-img: "img/about_2019.jpg"
 ---
-
-<!-- Language Selector -->
-<!-- <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
-    <option value="0" selected> 中文 Chinese </option>
-    <option value="1"> 英文 English </option>
-</select> -->
 
 <!-- Chinese Version -->
 <div class="zh post-container">
