--- a/tags.html
+++ b/tags.html
@@ -1,7 +1,7 @@
 ---
 title: Tags
 layout: default
-description: keep hungry keep foolish
+description: 白茶清欢无别事  我在等风也等你
 header-img: "img/tag-bg.png"
 ---
 
