--- a/about.html
+++ b/about.html
@@ -9,20 +9,28 @@ header-img: "img/about_2019.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>冰冻三尺 非一日之寒<br>
-    积土成山 非斯须之作</p></blockquote>
+    <blockquote>
+        <p>
+            致郭襄<br>
+            作者 程灵素<br>
+            <br>
+            我走过山时，山不说话，<br>
+            我路过海时，海不说话，<br>
+            小毛驴踢踢哒哒，倚天剑伴我走天涯。<br>
+            大家都说我因为爱着杨过大侠，才在峨眉山上出了家，<br>
+            其实我只是爱上了峨眉山上的云和霞，<br>
+            像极了十六岁那年的烟花。<br>
+            我路过海时，海不说话，<br>
+            我走过山时，山不回答；<br>
+            小毛驴滴滴答答，悠悠飘向远处，可从不想要回家。<br>
+            正当喜乐无忧年韶华如花，远游风尘之色却不似十九风华；<br>
+            愁思袭人无计回避真牵挂，不知天涯何处有那我思念的他。
+        </p>
+    </blockquote>
 
-    <p>Hey，我是<strong>晨猫</strong>，一只Java工程师，现在杭州工作。</p>
+    <p>Hello，我是<strong>晨猫</strong>，一只Java搬运工作者。</p>
 
-    <p>工作、学习之余，我喜欢读小说。</p>
-
-    <p>这是我的利用
-        <a href="https://pages.github.com/">GitHub Pages</a> 与
-        <a href="http://jekyll.com.cn/">Jekyll</a>
-        搭建的 个人博客。
-        我在GitHub主页<a href="https://github.com/morningcat2018">👉GitHub·BY</a>
-        与 开源中国博客<a href="https://my.oschina.net/mengzhang6/">👉BY</a>。
-        如果有什么问题，欢迎提出探讨~</p>
+    <p></p>
 
     <p></p>
     
