--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: 白茶清欢无别事  我在等风也等你
-header-img: "img/about_2019.jpg"
+header-img: "img/main/about_2019.jpg"
 ---
 
 <!-- Chinese Version -->
