--- a/tags.html
+++ b/tags.html
@@ -2,7 +2,7 @@
 title: Tags
 layout: default
 description: 白茶清欢无别事  我在等风也等你
-header-img: "img/tag-bg.png"
+header-img: "img/main/tag-bg.png"
 ---
 
 <!-- Page Header -->
