--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "-- --- .-. -. .. -. --. -.-. .- - -....- .-.. .. -.- . -....- --. ..- .. --.- .. .- --- "
+description: "-- --- .-. -. --. ..- .. .. -. --. .-.. .. -.- . --.- .. -.-. .- - .- --- "
 ---
 
 {% for post in paginator.posts %}
