--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ---
+title: "Home"
 layout: page
-description: "-- --- .-. -. --. ..- .. .. -. --. .-.. .. -.- . --.- .. -.-. .- - .- --- "
+description: "白茶清欢无别事  我在等风也等你"
+header-img: "img/main/about_2019.jpg"
 ---
 
 {% for post in paginator.posts %}
