--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
-title: "Home"
+title:
 layout: page
 description: "白茶清欢无别事  我在等风也等你"
-header-img: "img/main/about_2019.jpg"
+header-img:
 ---
 
 {% for post in paginator.posts %}
