--- a/about.html
+++ b/about.html
@@ -37,13 +37,14 @@ header-img: "img/main/guoxiang.PNG"
     <h5>Talks</h5>
 
     <ul>
-        <li><a href="https://github.com/morningcat2018">GitHub</a></li>
-        <li><a href="https://github.com/mengzhang6/">GitHub_mengzhang6</a></li>
-        <li><a href="https://gitee.com/morningcat/">Gitee</a></li>
-        <li><a href="https://gitee.com/mengzhang6">Gitee_mengzhang6</a></li>
+        <li><a href="https://github.com/morningcat2018">GitHub:morningcat2018</a></li>
+        <li><a href="https://github.com/mengzhang6/">GitHub:mengzhang6</a></li>
+        <li><a href="https://gitee.com/morningcat/">Gitee:morningcat</a></li>
+        <li><a href="https://gitee.com/mengzhang6">Gitee:mengzhang6</a></li>
 
         <li><a href="https://my.oschina.net/mengzhang6/">开源中国博客</a></li>
         <li><a href="https://blog.csdn.net/u013837825">CSDN博客</a></li>
+        <li><a href="https://juejin.cn/user/2647279730438461/columns">稀土掘金</a></li>
     </ul>
 </div>
 
